[gd_scene load_steps=37 format=3 uid="uid://cln5n67tv5iir"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_vroim"]
[ext_resource type="Texture2D" uid="uid://70q2cs74sk6m" path="res://Assets/Level/Background/Sky_Blue.png" id="2_otrt3"]
[ext_resource type="Texture2D" uid="uid://g3mf4pmgm8aw" path="res://Assets/Level/Background/vecteezy_mountain-clipart-design-illustration_9380801.png" id="3_ykyju"]
[ext_resource type="Texture2D" uid="uid://bjb6hdyo8b031" path="res://Assets/Level/puddle.png" id="4_ikjjw"]
[ext_resource type="Texture2D" uid="uid://cxx885xcwm2sf" path="res://Assets/Level/puddle_splash.png" id="5_l2pv6"]
[ext_resource type="TileSet" uid="uid://64j66ierjs7n" path="res://Level/ground.tres" id="6_3hoty"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6seka"]
atlas = ExtResource("4_ikjjw")
region = Rect2(0, 0, 11, 4)

[sub_resource type="SpriteFrames" id="SpriteFrames_nolgw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6seka")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qimto"]
atlas = ExtResource("5_l2pv6")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0bus"]
atlas = ExtResource("5_l2pv6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r476r"]
atlas = ExtResource("5_l2pv6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_edk84"]
atlas = ExtResource("5_l2pv6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cotbc"]
atlas = ExtResource("5_l2pv6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6o08"]
atlas = ExtResource("5_l2pv6")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbccd"]
atlas = ExtResource("5_l2pv6")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p6mf"]
atlas = ExtResource("5_l2pv6")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4csrx"]
atlas = ExtResource("5_l2pv6")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_srcj7"]
atlas = ExtResource("5_l2pv6")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5egd"]
atlas = ExtResource("5_l2pv6")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jbm4"]
atlas = ExtResource("5_l2pv6")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1i234"]
atlas = ExtResource("5_l2pv6")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aney3"]
atlas = ExtResource("5_l2pv6")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwqki"]
atlas = ExtResource("5_l2pv6")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dvsa"]
atlas = ExtResource("5_l2pv6")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cundy"]
atlas = ExtResource("5_l2pv6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw802"]
atlas = ExtResource("5_l2pv6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlmpb"]
atlas = ExtResource("5_l2pv6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pahs"]
atlas = ExtResource("5_l2pv6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opo7c"]
atlas = ExtResource("5_l2pv6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uipoo"]
atlas = ExtResource("5_l2pv6")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jn62"]
atlas = ExtResource("5_l2pv6")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opihs"]
atlas = ExtResource("5_l2pv6")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp32o"]
atlas = ExtResource("5_l2pv6")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67230"]
atlas = ExtResource("5_l2pv6")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7qrf"]
atlas = ExtResource("5_l2pv6")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_upbi6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qimto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qimto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0bus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r476r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edk84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cotbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6o08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbccd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p6mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4csrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srcj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5egd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jbm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1i234")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aney3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwqki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qimto")
}],
"loop": false,
"name": &"default",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dvsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dvsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cundy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw802")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlmpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pahs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opo7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uipoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jn62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opihs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp32o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67230")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7qrf")
}],
"loop": false,
"name": &"default1",
"speed": 5.0
}]

[node name="World" type="Node2D"]
script = ExtResource("1_vroim")

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(1026, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer"]
scale = Vector2(1.12086, 0.84026)
texture = ExtResource("2_otrt3")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(1026, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer2"]
scale = Vector2(0.128034, 0.327497)
texture = ExtResource("3_ykyju")
centered = false

[node name="Puddle1" type="AnimatedSprite2D" parent="."]
position = Vector2(400.102, 542.219)
scale = Vector2(31.8906, 31.8906)
sprite_frames = SubResource("SpriteFrames_nolgw")

[node name="Puddle2" type="AnimatedSprite2D" parent="."]
position = Vector2(1550.4, 542.219)
scale = Vector2(31.8906, 31.8906)
sprite_frames = SubResource("SpriteFrames_nolgw")

[node name="Puddle3" type="AnimatedSprite2D" parent="."]
position = Vector2(2705.4, 542.219)
scale = Vector2(31.8906, 31.8906)
sprite_frames = SubResource("SpriteFrames_nolgw")

[node name="PuddleTop" type="AnimatedSprite2D" parent="."]
position = Vector2(405, 345)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_upbi6")

[node name="PuddleTop2" type="AnimatedSprite2D" parent="."]
position = Vector2(1555.3, 345)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_upbi6")

[node name="PuddleTop3" type="AnimatedSprite2D" parent="."]
position = Vector2(2710.3, 345)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_upbi6")

[node name="Puddle4" type="AnimatedSprite2D" parent="."]
position = Vector2(3835.4, 542.219)
scale = Vector2(31.8906, 31.8906)
sprite_frames = SubResource("SpriteFrames_nolgw")

[node name="PuddleTop4" type="AnimatedSprite2D" parent="."]
position = Vector2(3840.3, 345)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_upbi6")

[node name="Puddle5" type="AnimatedSprite2D" parent="."]
position = Vector2(4987.4, 544.219)
scale = Vector2(31.8906, 31.8906)
sprite_frames = SubResource("SpriteFrames_nolgw")

[node name="PuddleTop5" type="AnimatedSprite2D" parent="."]
position = Vector2(4992.3, 347)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_upbi6")

[node name="Grassy" type="TileMap" parent="."]
scale = Vector2(2, 2)
tile_set = ExtResource("6_3hoty")
format = 2
layer_0/tile_data = PackedInt32Array(1114112, 2, 4, 1179648, 65538, 4, 1245184, 65538, 4, 1114113, 2, 4, 1179649, 65538, 4, 1245185, 2, 4, 1114114, 65538, 4, 1179650, 65538, 4, 1245186, 2, 4, 1114115, 2, 4, 1179651, 2, 4, 1245187, 2, 4, 1114116, 2, 4, 1179652, 65538, 4, 1245188, 65538, 4, 1114117, 2, 4, 1179653, 2, 4, 1245189, 2, 4, 1114118, 65538, 4, 1179654, 65538, 4, 1245190, 65538, 4, 1114119, 65538, 0, 1179655, 2, 0, 1245191, 65538, 4, 1114120, 2, 0, 1179656, 65538, 0, 1245192, 65538, 4, 1114121, 65538, 0, 1179657, 65538, 0, 1245193, 65538, 4, 1179658, 65538, 0, 1245194, 65538, 4, 1179659, 2, 0, 1245195, 65538, 4, 1179660, 2, 0, 1245196, 2, 4, 1179662, 2, 0, 1245198, 65538, 4, 1114127, 2, 0, 1179663, 65538, 0, 1245199, 2, 4, 1114128, 65538, 0, 1179664, 65538, 0, 1245200, 65538, 4, 1114129, 2, 0, 1179665, 65538, 0, 1245201, 2, 4, 1114130, 65538, 4, 1179666, 65538, 4, 1245202, 2, 4, 1114131, 2, 4, 1179667, 65538, 4, 1245203, 2, 4, 1114132, 65538, 4, 1179668, 65538, 4, 1245204, 2, 4, 1114133, 65538, 4, 1179669, 65538, 4, 1245205, 65538, 4, 1114134, 2, 4, 1179670, 65538, 4, 1245206, 65538, 4, 1114135, 2, 4, 1179671, 2, 4, 1245207, 65538, 4, 1114136, 2, 4, 1179672, 2, 4, 1245208, 2, 4, 1114137, 2, 4, 1179673, 65538, 4, 1245209, 2, 4, 1114138, 65538, 4, 1179674, 2, 4, 1245210, 2, 4, 1114139, 65538, 4, 1179675, 65538, 4, 1245211, 2, 4, 1114140, 65538, 4, 1179676, 65538, 4, 1245212, 65538, 4, 1114141, 65538, 4, 1179677, 2, 4, 1245213, 65538, 4, 1114142, 2, 4, 1179678, 65538, 4, 1245214, 65538, 4, 983040, 2, 4, 1048576, 65538, 4, 983041, 65538, 4, 1048577, 2, 4, 983042, 65538, 4, 1048578, 2, 4, 983043, 65538, 4, 1048579, 65538, 4, 983044, 2, 4, 1048580, 65538, 4, 983045, 65538, 4, 1048581, 65538, 4, 983046, 2, 4, 1048582, 2, 4, 1048583, 65538, 0, 983057, 2, 0, 1048593, 2, 0, 983058, 2, 4, 1048594, 65538, 4, 1048595, 2, 4, 1048596, 2, 4, 1048597, 65538, 4, 1048598, 2, 4, 1048599, 65538, 4, 1048600, 65538, 4, 1048601, 2, 4, 1048602, 65538, 4, 1048603, 2, 4, 1048604, 65538, 4, 1048605, 2, 4, 1048606, 65538, 4, 1048607, 65538, 4, 1114143, 2, 4, 1179679, 65538, 4, 1245215, 2, 4, 1048608, 65538, 4, 1114144, 65538, 4, 1179680, 2, 4, 1245216, 65538, 4, 1048609, 65538, 4, 1114145, 2, 4, 1179681, 65538, 4, 1245217, 65538, 4, 1048610, 2, 4, 1114146, 2, 4, 1179682, 65538, 4, 1245218, 2, 4, 1048611, 2, 4, 1114147, 65538, 4, 1179683, 65538, 4, 1245219, 65538, 4, 917522, 262146, 4, 1179661, 65538, 0, 1245197, 2, 4, 917511, 65538, 0, 1310720, 2, 4, 1310721, 2, 4, 1310722, 65538, 4, 1310723, 65538, 4, 1310724, 65538, 4, 1310725, 65538, 4, 1310726, 2, 4, 1310727, 2, 4, 1310728, 65538, 4, 1310729, 2, 4, 1310730, 2, 4, 1310731, 2, 4, 1310732, 2, 4, 1310733, 65538, 4, 1310734, 2, 4, 1310735, 65538, 4, 1310736, 65538, 4, 1310737, 65538, 4, 1310738, 65538, 4, 1310739, 2, 4, 1310740, 2, 4, 1310741, 65538, 4, 1310742, 65538, 4, 1310743, 65538, 4, 1310744, 2, 4, 1310745, 2, 4, 1310746, 2, 4, 1310747, 2, 4, 1310748, 65538, 4, 1310749, 65538, 4, 1310750, 2, 4, 1310751, 2, 4, 1310752, 65538, 4, 1310753, 65538, 4, 1310754, 2, 4, 1310755, 65538, 4, 1048612, 2, 4, 1114148, 2, 4, 1179684, 2, 4, 1245220, 2, 4, 1310756, 65538, 4, 1048613, 2, 4, 1114149, 65538, 4, 1179685, 65538, 4, 1245221, 65538, 4, 1310757, 65538, 4, 1048614, 65538, 4, 1114150, 65538, 4, 1179686, 2, 4, 1245222, 2, 4, 1310758, 2, 4, 1048615, 65538, 4, 1114151, 2, 4, 1179687, 2, 4, 1245223, 65538, 4, 1310759, 65538, 4, 1048616, 65538, 4, 1114152, 65538, 4, 1179688, 65538, 4, 1245224, 2, 4, 1310760, 2, 4, 1048617, 65538, 4, 1114153, 65538, 4, 1179689, 65538, 4, 1245225, 65538, 4, 1310761, 65538, 4, 1048618, 2, 4, 1114154, 2, 4, 1179690, 65538, 4, 1245226, 2, 4, 1310762, 65538, 4, 1048619, 2, 0, 1114155, 65538, 0, 1179691, 2, 0, 1245227, 65538, 4, 1310763, 2, 4, 1114156, 2, 0, 1179692, 65538, 0, 1245228, 2, 4, 1310764, 2, 4, 1179693, 65538, 0, 1245229, 2, 4, 1310765, 2, 4, 1179694, 2, 0, 1245230, 65538, 4, 1310766, 2, 4, 1179695, 2, 0, 1245231, 65538, 4, 1310767, 2, 4, 1179696, 2, 0, 1245232, 65538, 4, 1310768, 65538, 4, 1179697, 65538, 0, 1245233, 65538, 4, 1310769, 65538, 4, 1179698, 2, 0, 1245234, 65538, 4, 1310770, 65538, 4, 1179699, 65538, 0, 1245235, 65538, 4, 1310771, 2, 4, 1114164, 65538, 0, 1179700, 65538, 0, 1245236, 2, 4, 1310772, 2, 4, 917557, 65538, 0, 1048629, 2, 0, 1114165, 65538, 0, 1179701, 2, 0, 1245237, 2, 4, 1310773, 2, 4, 917558, 262146, 4, 1048630, 2, 4, 1114166, 65538, 4, 1179702, 65538, 4, 1245238, 2, 4, 1310774, 2, 4, 917559, 262146, 4, 983095, 2, 4, 1048631, 2, 4, 1114167, 65538, 4, 1179703, 2, 4, 1245239, 65538, 4, 1310775, 2, 4, 917560, 262146, 4, 983096, 65538, 4, 1048632, 65538, 4, 1114168, 65538, 4, 1179704, 2, 4, 1245240, 65538, 4, 1310776, 2, 4, 917561, 262146, 4, 983097, 2, 4, 1048633, 2, 4, 1114169, 2, 4, 1179705, 2, 4, 1245241, 2, 4, 1310777, 65538, 4, 917562, 262146, 4, 983098, 65538, 4, 1048634, 65538, 4, 1114170, 2, 4, 1179706, 2, 4, 1245242, 2, 4, 1310778, 2, 4, 917563, 262146, 4, 983099, 65538, 4, 1048635, 2, 4, 1114171, 2, 4, 1179707, 2, 4, 1245243, 2, 4, 1310779, 2, 4, 917564, 262146, 4, 983100, 2, 4, 1048636, 65538, 4, 1114172, 2, 4, 1179708, 2, 4, 1245244, 65538, 4, 1310780, 65538, 4, 917565, 262146, 4, 983101, 2, 4, 1048637, 65538, 4, 1114173, 2, 4, 1179709, 65538, 4, 1245245, 65538, 4, 1310781, 65538, 4, 917566, 262146, 4, 983102, 2, 4, 1048638, 2, 4, 1114174, 2, 4, 1179710, 65538, 4, 1245246, 2, 4, 1310782, 65538, 4, 917567, 262146, 4, 983103, 2, 4, 1048639, 65538, 4, 1114175, 65538, 4, 1179711, 2, 4, 1245247, 65538, 4, 1310783, 2, 4, 917568, 262146, 4, 983104, 2, 4, 1048640, 65538, 4, 1114176, 65538, 4, 1179712, 2, 4, 1245248, 65538, 4, 1310784, 65538, 4, 917569, 262146, 4, 983105, 2, 4, 1048641, 2, 4, 1114177, 2, 4, 1179713, 65538, 4, 1245249, 65538, 4, 1310785, 2, 4, 917570, 262146, 4, 983106, 2, 4, 1048642, 2, 4, 1114178, 65538, 4, 1179714, 65538, 4, 1245250, 2, 4, 1310786, 65538, 4, 917571, 262146, 4, 983107, 65538, 4, 1048643, 2, 4, 1114179, 2, 4, 1179715, 65538, 4, 1245251, 2, 4, 1310787, 65538, 4, 917572, 262146, 4, 983108, 2, 4, 1048644, 2, 4, 1114180, 65538, 4, 1179716, 2, 4, 1245252, 65538, 4, 1310788, 65538, 4, 917573, 262146, 4, 983109, 2, 4, 1048645, 65538, 4, 1114181, 65538, 4, 1179717, 2, 4, 1245253, 2, 4, 1310789, 65538, 4, 917574, 262146, 4, 983110, 2, 4, 1048646, 65538, 4, 1114182, 65538, 4, 1179718, 65538, 4, 1245254, 2, 4, 1310790, 65538, 4, 917575, 262146, 4, 983111, 2, 4, 1048647, 65538, 4, 1114183, 2, 4, 1179719, 65538, 4, 1245255, 65538, 4, 1310791, 2, 4, 917576, 262146, 4, 983112, 2, 4, 1048648, 65538, 4, 1114184, 2, 4, 1179720, 2, 4, 1245256, 2, 4, 1310792, 2, 4, 917577, 262146, 4, 983113, 65538, 4, 1048649, 2, 4, 1114185, 65538, 4, 1179721, 65538, 4, 1245257, 2, 4, 1310793, 2, 4, 917578, 262146, 4, 983114, 2, 4, 1048650, 65538, 4, 1114186, 65538, 4, 1179722, 65538, 4, 1245258, 2, 4, 1310794, 65538, 4, 917579, 262146, 4, 983115, 2, 4, 1048651, 2, 4, 1114187, 65538, 4, 1179723, 65538, 4, 1245259, 2, 4, 1310795, 65538, 4, 917580, 262146, 4, 983116, 2, 4, 1048652, 65538, 4, 1114188, 65538, 4, 1179724, 2, 4, 1245260, 65538, 4, 1310796, 65538, 4, 917581, 262146, 4, 983117, 2, 4, 1048653, 2, 4, 1114189, 65538, 4, 1179725, 2, 4, 1245261, 65538, 4, 1310797, 2, 4, 917582, 262146, 4, 983118, 2, 4, 1048654, 65538, 4, 1114190, 65538, 4, 1179726, 2, 4, 1245262, 65538, 4, 1310798, 2, 4, 917583, 2, 0, 1048655, 65538, 0, 1114191, 65538, 0, 1179727, 65538, 0, 1245263, 65538, 4, 1310799, 2, 4, 1179728, 65538, 0, 1245264, 65538, 4, 1310800, 65538, 4, 1114193, 2, 0, 1179729, 65538, 0, 1245265, 65538, 4, 1310801, 65538, 4, 1179730, 65538, 0, 1245266, 65538, 4, 1310802, 2, 4, 1179731, 65538, 0, 1245267, 65538, 4, 1310803, 65538, 4, 1179732, 2, 0, 1245268, 65538, 4, 1310804, 65538, 4, 1179733, 65538, 0, 1245269, 2, 4, 1310805, 2, 4, 1179734, 65538, 0, 1245270, 65538, 4, 1310806, 2, 4, 1114199, 65538, 0, 1179735, 2, 0, 1245271, 65538, 4, 1310807, 2, 4, 1114200, 2, 0, 1179736, 65538, 0, 1245272, 65538, 4, 1310808, 65538, 4, 917593, 65538, 0, 1048665, 2, 0, 1114201, 2, 0, 1179737, 65538, 0, 1245273, 2, 4, 1310809, 65538, 4, 917594, 262146, 4, 983130, 65538, 4, 1048666, 65538, 4, 1114202, 2, 4, 1179738, 2, 4, 1245274, 2, 4, 1310810, 65538, 4, 917595, 262146, 4, 983131, 65538, 4, 1048667, 65538, 4, 1114203, 2, 4, 1179739, 65538, 4, 1245275, 65538, 4, 1310811, 2, 4, 917596, 262146, 4, 983132, 2, 4, 1048668, 65538, 4, 1114204, 2, 4, 1179740, 2, 4, 1245276, 2, 4, 1310812, 65538, 4, 917597, 262146, 4, 983133, 2, 4, 1048669, 2, 4, 1114205, 65538, 4, 1179741, 2, 4, 1245277, 65538, 4, 1310813, 65538, 4, 917598, 262146, 4, 983134, 65538, 4, 1048670, 65538, 4, 1114206, 2, 4, 1179742, 2, 4, 1245278, 2, 4, 1310814, 65538, 4, 917599, 262146, 4, 983135, 2, 4, 1048671, 65538, 4, 1114207, 2, 4, 1179743, 2, 4, 1245279, 2, 4, 1310815, 2, 4, 917600, 262146, 4, 983136, 2, 4, 1048672, 2, 4, 1114208, 2, 4, 1179744, 65538, 4, 1245280, 65538, 4, 1310816, 65538, 4, 917601, 262146, 4, 983137, 65538, 4, 1048673, 65538, 4, 1114209, 65538, 4, 1179745, 2, 4, 1245281, 2, 4, 1310817, 2, 4, 917602, 262146, 4, 983138, 65538, 4, 1048674, 65538, 4, 1114210, 65538, 4, 1179746, 2, 4, 1245282, 65538, 4, 1310818, 2, 4, 917603, 262146, 4, 983139, 2, 4, 1048675, 2, 4, 1114211, 65538, 4, 1179747, 2, 4, 1245283, 2, 4, 1310819, 65538, 4, 917604, 262146, 4, 983140, 65538, 4, 1048676, 2, 4, 1114212, 65538, 4, 1179748, 65538, 4, 1245284, 65538, 4, 1310820, 65538, 4, 917605, 262146, 4, 983141, 2, 4, 1048677, 2, 4, 1114213, 2, 4, 1179749, 2, 4, 1245285, 2, 4, 1310821, 2, 4, 917606, 262146, 4, 983142, 65538, 4, 1048678, 2, 4, 1114214, 2, 4, 1179750, 2, 4, 1245286, 2, 4, 1310822, 2, 4, 917607, 262146, 4, 983143, 2, 4, 1048679, 2, 4, 1114215, 65538, 4, 1179751, 65538, 4, 1245287, 65538, 4, 1310823, 2, 4, 917608, 262146, 4, 983144, 2, 4, 1048680, 2, 4, 1114216, 2, 4, 1179752, 65538, 4, 1245288, 65538, 4, 1310824, 2, 4, 917609, 262146, 4, 983145, 65538, 4, 1048681, 2, 4, 1114217, 2, 4, 1179753, 65538, 4, 1245289, 65538, 4, 1310825, 2, 4, 917610, 262146, 4, 983146, 65538, 4, 1048682, 65538, 4, 1114218, 2, 4, 1179754, 2, 4, 1245290, 2, 4, 1310826, 2, 4, 917611, 262146, 4, 983147, 2, 4, 1048683, 2, 4, 1114219, 65538, 4, 1179755, 2, 4, 1245291, 65538, 4, 1310827, 65538, 4, 983047, 2, 0, 1048584, 2, 0, 1114196, 65538, 0, 1114198, 2, 0, 1048585, 65538, 0, 1114122, 2, 0, 1114124, 2, 0, 1048590, 65538, 0, 1114126, 65538, 0, 917504, 262146, 4, 917505, 262146, 4, 917506, 262146, 4, 917507, 262146, 4, 917508, 262146, 4, 917509, 262146, 4, 917510, 262146, 4, 917523, 262146, 4, 983059, 2, 4, 917524, 262146, 4, 983060, 65538, 4, 917525, 262146, 4, 983061, 65538, 4, 917526, 262146, 4, 983062, 65538, 4, 917527, 262146, 4, 983063, 65538, 4, 917528, 262146, 4, 983064, 65538, 4, 917529, 262146, 4, 983065, 65538, 4, 917530, 262146, 4, 983066, 2, 4, 917531, 262146, 4, 983067, 65538, 4, 917532, 262146, 4, 983068, 2, 4, 917533, 262146, 4, 983069, 65538, 4, 917534, 262146, 4, 983070, 65538, 4, 917535, 262146, 4, 983071, 65538, 4, 917536, 262146, 4, 983072, 65538, 4, 917537, 262146, 4, 983073, 65538, 4, 917538, 262146, 4, 983074, 2, 4, 917539, 262146, 4, 983075, 2, 4, 917540, 262146, 4, 983076, 65538, 4, 917541, 262146, 4, 983077, 2, 4, 917542, 262146, 4, 983078, 65538, 4, 917543, 262146, 4, 983079, 65538, 4, 917544, 262146, 4, 983080, 65538, 4, 917545, 262146, 4, 983081, 65538, 4, 917546, 262146, 4, 983082, 2, 4, 917547, 2, 0, 983083, 2, 0, 983148, 65538, 4, 1048685, 65538, 4, 1048686, 2, 4, 1114223, 2, 4, 1179760, 2, 4, 1179761, 2, 4, 1245297, 65538, 4, 1245298, 65538, 4, 1310834, 65538, 4, 1048684, 65538, 4, 1114220, 65538, 4, 1179756, 2, 4, 1245292, 2, 4, 1310828, 65538, 4, 983149, 65538, 4, 1114221, 65538, 4, 1179757, 2, 4, 1245293, 65538, 4, 1310829, 2, 4, 983150, 65538, 4, 1114222, 2, 4, 1179758, 65538, 4, 1245294, 2, 4, 1310830, 65538, 4, 983151, 2, 4, 1048687, 65538, 4, 1179759, 65538, 4, 1245295, 65538, 4, 1310831, 65538, 4, 983152, 65538, 4, 1048688, 2, 4, 1114224, 2, 4, 1245296, 65538, 4, 1310832, 2, 4, 983153, 65538, 4, 1048689, 65538, 4, 1114225, 2, 4, 1310833, 2, 4, 1048690, 65538, 0, 1114226, 65538, 0, 1179762, 65538, 4, 917612, 262146, 4, 917613, 262146, 4, 917614, 262146, 4, 917615, 262146, 4, 917616, 262146, 4, 917617, 262146, 4, 917618, 262146, 4, 1179765, 2, 0, 1179766, 65538, 0, 1179767, 2, 0, 1179768, 65538, 0, 1179769, 65538, 0, 1179770, 2, 0, 1179771, 2, 0, 1179772, 65538, 0, 1179773, 65538, 4, 1179774, 65538, 4, 917630, 262146, 4, 983166, 2, 0, 1048702, 2, 0, 1114238, 2, 0, 917631, 262146, 4, 917632, 262146, 4, 917633, 262146, 4, 917634, 262146, 4, 917635, 262146, 4, 917636, 262146, 4, 917637, 262146, 4, 917638, 262146, 4, 917639, 262146, 4, 917640, 262146, 4, 917641, 262146, 4, 917642, 262146, 4, 917643, 262146, 4, 917644, 262146, 4, 917645, 262146, 4, 917646, 262146, 4, 917647, 262146, 4, 917648, 262146, 4, 917649, 262146, 4, 917650, 262146, 4, 917651, 262146, 4, 917652, 262146, 4, 917653, 262146, 4, 917654, 65538, 0, 1179763, 2, 0, 1245299, 2, 4, 1310835, 2, 4, 1179764, 2, 0, 1245300, 65538, 4, 1310836, 2, 4, 1245301, 2, 4, 1310837, 65538, 4, 1245302, 2, 4, 1310838, 2, 4, 1245303, 2, 4, 1310839, 2, 4, 1245304, 2, 4, 1310840, 65538, 4, 1245305, 2, 4, 1310841, 65538, 4, 1245306, 2, 4, 1310842, 65538, 4, 1245307, 65538, 4, 1310843, 65538, 4, 1245308, 2, 4, 1310844, 2, 4, 1245309, 65538, 4, 1310845, 2, 4, 1245310, 65538, 4, 1310846, 2, 4, 1179775, 2, 4, 1245311, 2, 4, 1310847, 65538, 4, 1179776, 2, 4, 1245312, 2, 4, 1310848, 2, 4, 1179777, 2, 4, 1245313, 65538, 4, 1310849, 2, 4, 1179778, 2, 4, 1245314, 65538, 4, 1310850, 2, 4, 1179779, 2, 4, 1245315, 65538, 4, 1310851, 65538, 4, 1179780, 65538, 4, 1245316, 2, 4, 1310852, 65538, 4, 1179781, 2, 4, 1245317, 2, 4, 1310853, 2, 4, 1179782, 65538, 4, 1245318, 2, 4, 1310854, 65538, 4, 1179783, 2, 4, 1245319, 2, 4, 1310855, 65538, 4, 1179784, 65538, 4, 1245320, 2, 4, 1310856, 65538, 4, 1179785, 65538, 4, 1245321, 65538, 4, 1310857, 65538, 4, 1179786, 2, 4, 1245322, 65538, 4, 1310858, 2, 4, 1179787, 65538, 4, 1245323, 2, 4, 1310859, 65538, 4, 1179788, 65538, 4, 1245324, 65538, 4, 1310860, 2, 4, 1179789, 65538, 4, 1245325, 2, 4, 1310861, 2, 4, 1179790, 2, 4, 1245326, 2, 4, 1310862, 2, 4, 1179791, 2, 4, 1245327, 2, 4, 1310863, 2, 4, 1179792, 2, 4, 1245328, 65538, 4, 1310864, 65538, 4, 1179793, 2, 4, 1245329, 65538, 4, 1310865, 2, 4, 1179794, 2, 4, 1245330, 65538, 4, 1310866, 65538, 4, 1179795, 65538, 4, 1245331, 2, 4, 1310867, 65538, 4, 1179796, 2, 4, 1245332, 65538, 4, 1310868, 65538, 4, 1179797, 2, 4, 1245333, 65538, 4, 1310869, 65538, 4, 1179798, 65538, 4, 1245334, 65538, 4, 1310870, 2, 4, 1179799, 65538, 0, 1245335, 65538, 4, 1310871, 2, 4, 1179800, 2, 0, 1245336, 2, 4, 1310872, 2, 4, 1179801, 2, 0, 1245337, 2, 4, 1310873, 2, 4, 1179802, 2, 0, 1245338, 2, 4, 1310874, 2, 4, 1179803, 2, 0, 1245339, 65538, 4, 1310875, 65538, 4, 1179804, 2, 0, 1245340, 65538, 4, 1310876, 2, 4, 1179805, 2, 0, 1245341, 2, 4, 1310877, 2, 4, 1179806, 65538, 0, 1245342, 65538, 4, 1310878, 2, 4, 1179807, 65538, 0, 1245343, 2, 4, 1310879, 65538, 4, 1179808, 65538, 0, 1245344, 65538, 4, 1310880, 2, 4, 1179809, 65538, 4, 1245345, 2, 4, 1310881, 2, 4, 1179810, 65538, 4, 1245346, 2, 4, 1310882, 65538, 4, 1179811, 2, 4, 1245347, 2, 4, 1310883, 65538, 4, 1179812, 65538, 4, 1245348, 2, 4, 1310884, 2, 4, 1179813, 2, 4, 1245349, 65538, 4, 1310885, 2, 4, 1179814, 65538, 4, 1245350, 65538, 4, 1310886, 2, 4, 1179815, 65538, 4, 1245351, 65538, 4, 1310887, 65538, 4, 1179816, 2, 4, 1245352, 65538, 4, 1310888, 2, 4, 1179817, 2, 4, 1245353, 65538, 4, 1310889, 2, 4, 1179818, 65538, 4, 1245354, 2, 4, 1310890, 2, 4, 1179819, 2, 4, 1245355, 2, 4, 1310891, 65538, 4, 1179820, 2, 4, 1245356, 65538, 4, 1310892, 65538, 4, 1179821, 65538, 4, 1245357, 65538, 4, 1310893, 65538, 4, 1179822, 65538, 4, 1245358, 2, 4, 1310894, 2, 4, 1179823, 65538, 4, 1245359, 2, 4, 1310895, 2, 4, 1179824, 2, 4, 1245360, 65538, 4, 1310896, 2, 4, 1179825, 2, 4, 1245361, 2, 4, 1310897, 65538, 4, 1179826, 65538, 4, 1245362, 65538, 4, 1310898, 2, 4, 983210, 2, 4, 1048746, 65538, 4, 1114282, 2, 4, 983211, 2, 4, 1048747, 65538, 4, 1114283, 65538, 4, 983212, 65538, 4, 1048748, 2, 4, 1114284, 2, 4, 983213, 65538, 4, 1048749, 2, 4, 1114285, 65538, 4, 983214, 65538, 4, 1048750, 65538, 4, 1114286, 2, 4, 983215, 2, 4, 1048751, 2, 4, 1114287, 65538, 4, 983216, 65538, 4, 1048752, 65538, 4, 1114288, 65538, 4, 983217, 2, 4, 1048753, 65538, 4, 1114289, 65538, 4, 983218, 65538, 4, 1048754, 65538, 4, 1114290, 65538, 4, 1114273, 65538, 0, 983202, 65538, 4, 1048738, 65538, 4, 1114274, 2, 4, 983203, 2, 4, 1048739, 2, 4, 1114275, 65538, 4, 983204, 65538, 4, 1048740, 65538, 4, 1114276, 65538, 4, 983205, 65538, 4, 1048741, 2, 4, 1114277, 65538, 4, 983206, 2, 4, 1048742, 2, 4, 1114278, 2, 4, 983207, 65538, 4, 1048743, 65538, 4, 1114279, 2, 4, 983208, 65538, 4, 1048744, 2, 4, 1114280, 65538, 4, 983209, 65538, 4, 1048745, 2, 4, 1114281, 65538, 4, 983167, 65538, 4, 1048703, 2, 4, 1114239, 65538, 4, 983168, 2, 4, 1048704, 2, 4, 1114240, 2, 4, 983169, 2, 4, 1048705, 65538, 4, 1114241, 2, 4, 983170, 65538, 4, 1048706, 2, 4, 1114242, 65538, 4, 983171, 65538, 4, 1048707, 65538, 4, 1114243, 2, 4, 983172, 2, 4, 1048708, 2, 4, 1114244, 2, 4, 983173, 65538, 4, 1048709, 65538, 4, 1114245, 2, 4, 983174, 2, 4, 1048710, 2, 4, 1114246, 65538, 4, 983175, 65538, 4, 1048711, 2, 4, 1114247, 65538, 4, 983176, 65538, 4, 1048712, 2, 4, 1114248, 2, 4, 983177, 65538, 4, 1048713, 65538, 4, 1114249, 2, 4, 983178, 65538, 4, 1048714, 2, 4, 1114250, 65538, 4, 983179, 65538, 4, 1048715, 65538, 4, 1114251, 65538, 4, 983180, 2, 4, 1048716, 2, 4, 1114252, 2, 4, 983181, 2, 4, 1048717, 2, 4, 1114253, 65538, 4, 983182, 2, 4, 1048718, 2, 4, 1114254, 65538, 4, 983183, 2, 4, 1048719, 2, 4, 1114255, 2, 4, 983184, 65538, 4, 1048720, 65538, 4, 1114256, 65538, 4, 983185, 65538, 4, 1048721, 65538, 4, 1114257, 65538, 4, 983186, 2, 4, 1048722, 65538, 4, 1114258, 65538, 4, 983187, 2, 4, 1048723, 2, 4, 1114259, 65538, 4, 983188, 65538, 4, 1048724, 2, 4, 1114260, 65538, 4, 983189, 65538, 4, 1048725, 65538, 4, 1114261, 2, 4, 983094, 2, 4, 983093, 2, 0, 1114192, 2, 0, 983129, 2, 0, 983119, 2, 0, 983154, 65538, 0, 917629, 2, 0, 983165, 2, 0, 1048701, 2, 0, 1114237, 2, 0, 1114227, 65538, 0, 1114228, 65538, 0, 1048700, 2, 0, 1114236, 65538, 0, 1114235, 65538, 0, 983190, 2, 0, 1048726, 2, 0, 1114262, 65538, 0, 917665, 2, 0, 983201, 65538, 0, 1048737, 2, 0, 983191, 2, 0, 1048727, 2, 0, 1114263, 65538, 0, 1048735, 2, 0, 1114271, 65538, 0, 1048736, 65538, 0, 1114272, 2, 0, 983200, 2, 0, 917666, 262146, 4, 917667, 262146, 4, 917668, 262146, 4, 917669, 262146, 4, 917670, 262146, 4, 917671, 262146, 4, 917672, 262146, 4, 917673, 262146, 4, 917674, 262146, 4, 917675, 262146, 4, 917676, 262146, 4, 917677, 262146, 4, 917678, 262146, 4, 917679, 262146, 4, 917680, 262146, 4, 917681, 262146, 4, 917682, 262146, 4)
